--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "fullcalendar": "^6.1.15",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
