--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-device-detect": "^2.2.3",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "react-dom": "^18.2.0",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
