--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@reduxjs/toolkit": "^2.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
