--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@reduxjs/toolkit": "^2.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
