Ajuste y template para unir

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@mui/styled-engine-sc": "^6.1.10",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
     "styled-components": "^6.1.13"
   },
