--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.2.0",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15"
+    "@fullcalendar/react": "^6.1.15",
+    "@reduxjs/toolkit": "^2.5.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
