--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@mui/styled-engine-sc": "^6.1.10",
+    "@reduxjs/toolkit": "^2.5.0",
     "lodash.isequal": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
